--- a/app/views/documentation/release/index.html.haml
+++ b/app/views/documentation/release/index.html.haml
@@ -6,6 +6,40 @@
 
 %ul.accordion{"data-accordion" => "", "data-allow-all-closed" => "true", "data-multi-expand" => "false"}
   %li.accordion-item{"data-accordion-item" => ""}
+    %a.accordion-title{:href => "#"} 1.16 (February 22, 2022)
+    .accordion-content{"data-tab-content" => ""}
+      %p
+        %ul
+          %li
+            Display applicant name instead of submitter on review assignment page.
+            #{github_issue_link(issue: 877)}
+          %li
+            Account for long grant titles in CSS.
+            #{github_issue_link(issue: 880)}
+          %li
+            Update the publish date for consistent formatting.
+            #{github_issue_link(issue: 900)}
+          %li
+            Account for logged in users in devise controllers.
+            #{github_issue_link(issue: 896)}
+          %li
+            Rearrange registered user login page.
+            #{github_issue_link(issue: 897)}
+          %li
+            Update Puma version.
+            #{github_issue_link(issue: 899)}
+          %li
+            Update the publish date for consistent formatting.
+            #{github_issue_link(issue: 900)}
+          %li
+            Update rails version to 6.1.4.6.
+            #{github_issue_link(issue: 903)}
+          %li
+            Remove devise rememberable.
+            #{github_issue_link(issue: 905)}
+
+%ul.accordion{"data-accordion" => "", "data-allow-all-closed" => "true", "data-multi-expand" => "false"}
+  %li.accordion-item{"data-accordion-item" => ""}
     %a.accordion-title{:href => "#"} 1.15.2 (February 4, 2022)
     .accordion-content{"data-tab-content" => ""}
       %p
