--- a/app/views/documentation/release/index.html.haml
+++ b/app/views/documentation/release/index.html.haml
@@ -32,7 +32,7 @@
             Update the publish date for consistent formatting.
             #{github_issue_link(issue: 900)}
           %li
-            Update rails version to 6.1.4.6.
+            Update rails version to 6.1.4.6 and corresponding gems.
             #{github_issue_link(issue: 903)}
           %li
             Remove devise rememberable.
