update release notes for 1.16. #909

--- a/app/views/documentation/release/index.html.haml
+++ b/app/views/documentation/release/index.html.haml
@@ -26,9 +26,6 @@
             Rearrange registered user login page.
             #{github_issue_link(issue: 897)}
           %li
-            Update Puma version.
-            #{github_issue_link(issue: 899)}
-          %li
             Update the publish date for consistent formatting.
             #{github_issue_link(issue: 900)}
           %li
@@ -37,6 +34,18 @@
           %li
             Remove devise rememberable.
             #{github_issue_link(issue: 905)}
+          %li
+            Exclude discarded submissions from index page.
+            #{github_issue_link(issue: 914)}
+          %li
+            Check upload filetypes.
+            #{github_issue_link(issue: 915)}
+          %li
+            Update Puma version.
+            #{github_issue_link(issue: 899)}
+          %li
+            Update Nokogiri version.
+            #{github_issue_link(issue: 912)}
 
 %ul.accordion{"data-accordion" => "", "data-allow-all-closed" => "true", "data-multi-expand" => "false"}
   %li.accordion-item{"data-accordion-item" => ""}
