change devise wording for gmail filters. #922

--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -1,5 +1,7 @@
-<p>Welcome <%= @email %>!</p>
+<p>"Welcome,"</p>
 
-<p><%= "You can confirm your #{COMPETITIONS_CONFIG[:application_name]} account email through the link below:" %></p>
+<p><%= "Thank you for creating an account with #{COMPETITIONS_CONFIG[:application_name]}." %></p>
 
-<p><%= link_to 'Confirm my account', confirmation_url(@resource, confirmation_token: @token) %></p>
+<p><%= "You can start using #{COMPETITIONS_CONFIG[:application_name]} by clicking on the link below to confirm your account" %></p>
+
+<p><%= link_to "Confirm my #{COMPETITIONS_CONFIG[:application_name]} account", confirmation_url(@resource, confirmation_token: @token) %></p>
