--- a/app/views/documentation/release/index.html.haml
+++ b/app/views/documentation/release/index.html.haml
@@ -14,8 +14,14 @@
             Change wording for registered user confirmations.
             #{github_issue_link(issue: 922)}
           %li
+            Fix deprecation warnings for rails 7.
+            #{github_issue_link(issue: 928)}
+          %li
             Update Puma version.
             #{github_issue_link(issue: 923)}
+          %li
+            Update Nokogiri version.
+            #{github_issue_link(issue: 927)}
 
 %ul.accordion{"data-accordion" => "", "data-allow-all-closed" => "true", "data-multi-expand" => "false"}
   %li.accordion-item{"data-accordion-item" => ""}
