some more changes trying to move over js changes.

--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -53,6 +53,11 @@ header {
   }
 
   main {
+    .callout {
+      a {
+        text-decoration: underline;
+      }
+    }
     #submenu {
       background: none;
       display: flex;
