pr comment changes. #931

--- a/app/views/grant_submissions/forms/_question_form.html.haml
+++ b/app/views/grant_submissions/forms/_question_form.html.haml
@@ -1,4 +1,4 @@
-%fieldset.fieldset.form_builder_question_fieldset{id: "question-fieldset"}
+%fieldset.fieldset.form_builder_question_fieldset
   %legend
     %span
       Question
