--- a/app/views/banners/new.html.haml
+++ b/app/views/banners/new.html.haml
@@ -3,7 +3,7 @@
 %h1
   Create a New Banner
 
-= form_with model: @banner, local: true do |f|
+= form_with model: @banner, local: true, data: { turbo: false } do |f|
   = render 'form', f: f, banner: @banner
 
 = link_to 'Back to All Banners', banners_path
