WIP: form and controller adjustments for turbo, add needed pauses in specs

--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -6,7 +6,7 @@
       <%= render "devise/shared/login_prepend_links" %>
 
       <div class="cell">
-        <%= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
+        <%= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }, data: { turbo: false }) do |f| %>
           <div id="fields">
             <div class="field">
               <%= f.label :email %>
