--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -1,7 +1,7 @@
 %h3
   Change Your Password
 
-= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
+= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }, data: { turbo: false}) do |f|
   .field
     = f.label :email
     = f.email_field :email, disabled: true, autofocus: true, autocomplete: "email"
