--- a/app/views/grant_creator_requests/new.html.haml
+++ b/app/views/grant_creator_requests/new.html.haml
@@ -6,7 +6,7 @@
 %p
   Please submit this form to request the ability to create Grants.
 
-= form_with model: @grant_creator_request, url: grant_creator_requests_path(@grant_request), local: true, id: 'grant-request' do |f|
+= form_with model: @grant_creator_request, url: grant_creator_requests_path(@grant_request), local: true, data: { turbo: false }, id: 'grant-request' do |f|
   = render partial: 'request_attributes', locals: { f: f, request: @grant_creator_request }
 
   .grid-x
