--- a/app/views/grant_permissions/edit.html.haml
+++ b/app/views/grant_permissions/edit.html.haml
@@ -25,5 +25,5 @@
 
   .grid-x
     .cell
-      = form_with model: [@grant, @grant_permission], local: true do |f|
+      = form_with model: [@grant, @grant_permission], local: true, data: { turbo: false } do |f|
         = render 'edit_form', f: f, grant: @grant
