--- a/app/views/grant_permissions/new.html.haml
+++ b/app/views/grant_permissions/new.html.haml
@@ -24,5 +24,5 @@
 
   .grid-x
     .cell
-      = form_with model: [@grant, @grant_permission], local: true do |f|
+      = form_with model: [@grant, @grant_permission], local: true, data: { turbo: false } do |f|
         = render 'new_form', f: f, grant: @grant, users: @users
