--- a/app/views/grant_submissions/submissions/new.html.haml
+++ b/app/views/grant_submissions/submissions/new.html.haml
@@ -27,5 +27,5 @@
 
       %hr
 
-    = grant_form_for [@grant, @submission], url: grant_submissions_url, html: {multipart: true} do |f|
+    = grant_form_for [@grant, @submission], url: grant_submissions_url, html: {multipart: true}, local: true, data: { turbo: false } do |f|
       = render partial: 'form', locals: { f: f }
