changes to fix failing specs. #947 there was a combination of 3 things going on with the specs here. Turbo required new form_for arguments. Turbo runs slightly slower requiring sleeping after a save on forms. Finally, we needed to add cocoon to the package manager.

--- a/app/views/grant_submissions/forms/_form.html.haml
+++ b/app/views/grant_submissions/forms/_form.html.haml
@@ -13,7 +13,7 @@
 - unless @form.new_record?
   = hidden_field_tag :form_update_fields_url, update_fields_grant_form_url(@grant, @form), id: 'survey_update_fields_url'
 
-= grant_form_for([@grant, @form], url: grant_form_path) do |f|
+= grant_form_for [@grant, @form], url: grant_form_path, local: true, data: { turbo: false } do |f|
   %table.unstriped
     %tr
       %td
