another update to text to remove duplicate link. #941

--- a/app/views/reviewer_mailer/assignment.html.haml
+++ b/app/views/reviewer_mailer/assignment.html.haml
@@ -15,7 +15,6 @@
   The deadline for your review is #{@grant.review_close_date.strftime("%B %e, %Y")}.
 
 %p
-  Review or opt out of reviewing here: #{link_to @submission.title, grant_submission_url(@grant, @submission)}.
-
+  You may review or opt-out of reviewing this submission at the link above.
 %p
   Thank you.
