Add alt tags to footer imaages #196

--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -2,10 +2,10 @@
   #logos.grid-x.grid-padding-x
     .cell.small-12.medium-6.text-center.medium-text-right
       = link_to 'http://cd2h.org/' do
-        = image_tag 'CD2H_logo.png', class: 'logo'
+        = image_tag 'CD2H_logo.png', class: 'logo', alt: 'National Center for Data to Health (CD2H)'
     .cell.small-12.medium-6.text-center.medium-text-left
       = link_to 'http://nucats.northwestern.edu/' do
-        = image_tag 'CATS-gradient.png', class: 'logo'
+        = image_tag 'CATS-gradient.png', class: 'logo', alt: 'Northwestern University Clinical and Translational Sciences Institute (NUCATS)'
   .grid-x.grid-padding-x.text-center
     .cell.small-12
       %p
