update version and release notes for 1.17. #965

--- a/app/views/documentation/release/index.html.haml
+++ b/app/views/documentation/release/index.html.haml
@@ -6,6 +6,69 @@
 
 %ul.accordion{"data-accordion" => "", "data-allow-all-closed" => "true", "data-multi-expand" => "false"}
   %li.accordion-item{"data-accordion-item" => ""}
+    %a.accordion-title{:href => "#"} 1.17 (August 8, 2022)
+    .accordion-content{"data-tab-content" => ""}
+      %p
+        %ul
+          %li
+            Add ability manage reviewer invitations.
+            #{github_issue_link(issue: 911)}
+          %li
+            Specify language in html tags.
+            #{github_issue_link(issue: 196)}
+          %li
+            Change text for reviewer email.
+            #{github_issue_link(issue: 941)}
+          %li
+            Clean up banner and grant reviewer views.
+            #{github_issue_link(issue: 935)}
+          %li
+            Add notifications column to the index of grant permissions.
+            #{github_issue_link(issue: 792)}
+          %li
+            Add checkbox for submission notifications to new grant permissions.
+            #{github_issue_link(issue: 793)}
+          %li
+            Cache visible system banners and include on all pages.
+            #{github_issue_link(issue: 235)}
+          %li
+            Fix signout issue.
+            #{github_issue_link(issue: 964)}
+          %li
+            Fix deployment issues.
+            #{github_issue_link(issue: 946)}
+          %li
+            Remove logged in saml user access to registered user pages.
+            #{github_issue_link(issue: 602)}
+          %li
+            Fix failing specs.
+            #{github_issue_link(issue: 936)},
+            #{github_issue_link(issue: 947)},
+            #{github_issue_link(issue: 957)}
+          %li
+            Add jsbundling for handling javascript.
+            #{github_issue_link(issue: 931)}
+          %li
+            Add turbo-rails gem.
+            #{github_issue_link(issue: 954)}
+          %li
+            Upgrade devise gem.
+            #{github_issue_link(issue: 964)}
+          %li
+            Upgrade devise_saml_authenticatable gem.
+            #{github_issue_link(issue: 964)}
+          %li
+            Bump nokogiri 1.13.6.
+            #{github_issue_link(issue: 939)}
+          %li
+            Bump rack 2.2.3.1.
+            #{github_issue_link(issue: 948)}
+          %li
+            bump rails-html-sanitizer to 1.4.3 #952
+            #{github_issue_link(issue: 922)}
+
+%ul.accordion{"data-accordion" => "", "data-allow-all-closed" => "true", "data-multi-expand" => "false"}
+  %li.accordion-item{"data-accordion-item" => ""}
     %a.accordion-title{:href => "#"} 1.16.1 (April 11, 2022)
     .accordion-content{"data-tab-content" => ""}
       %p
