--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -80,6 +80,8 @@ header {
 
   main {
     .callout {
+      height: fit-content;
+      width: 100%;
       a {
         text-decoration: underline;
       }
