--- a/app/views/grant_reviewers/index.html.haml
+++ b/app/views/grant_reviewers/index.html.haml
@@ -27,7 +27,7 @@
           %div{ style: 'display: inline-block' }
             = form_for :grant_reviewer, url: grant_reviewers_path(@grant) do |f|
               .input-group
-                = f.email_field :reviewer_email, placeholder: 'Email', class: 'input-group-field'
+                = f.email_field :reviewer_email, placeholder: 'Email', class: 'input-group-field', required: true
                 .input-group-button
                   = f.submit 'Look Up', class: 'button small'
         %li
