--- a/app/views/grant_reviewers/invitations/index.html.haml
+++ b/app/views/grant_reviewers/invitations/index.html.haml
@@ -31,7 +31,7 @@
             Actions:
           - if @has_open_invitations
             %li
-              = link_to 'Send Reminder to All Invited Reviewers', grant_invitation_reminders_path(@grant)
+              = link_to 'Send Reminder to All Invited Reviewers', grant_invitation_reminders_path(@grant), data: {turbo: false}
           %li
             = link_to 'Back to Reviewers', grant_reviewers_path(@grant)
 
