change to turbo:load in reviews js. #975

--- a/app/views/grant_reviewers/index.html.haml
+++ b/app/views/grant_reviewers/index.html.haml
@@ -135,7 +135,7 @@
   }
 
   if (window.addEventListener) {
-    window.addEventListener("load", downloadJSAtOnload, false);
+    window.addEventListener("turbo:load", downloadJSAtOnload, false);
   } else if (window.attachEvent) {
     window.attachEvent("onload", downloadJSAtOnload);
   } else {
