--- a/app/views/grant_permissions/new.html.haml
+++ b/app/views/grant_permissions/new.html.haml
@@ -20,7 +20,7 @@
 
 .tabs-panel.is-active
 
-  = render 'permissions_header'
+  %p= "Add someone to this Grant and control their access. They will need to have logged in to #{COMPETITIONS_CONFIG[:application_name]} first."
 
   .grid-x
     .cell
