--- a/app/views/grant_permissions/_edit_form.html.haml
+++ b/app/views/grant_permissions/_edit_form.html.haml
@@ -1,17 +1,16 @@
-.grid-x
-  .cell.small-12.medium-4
-    = f.label :user, 'Edit Permission for:'
+%h5
+  Edit Permission for:
+.grid-x.grid-padding-x
+  .cell.small-12.medium-3
     = full_name(@user)
-    = surround ' (', ')' do
-      = @user.email
-  .cell.small-12.medium-4
-    = f.label :role, 'Grant Role'
-    = f.select :role, grant_permission_role_select_options, include_blank: 'Please select'
-.grid-x
-  .cell.small-12
-    Receive Notifications for:
-    = render partial: 'grant_permissions/notification_checkboxes', locals: { f: f }
-.grid-x
+    %br
+    .small= @user.email
+  .cell.small-12.medium-8
+    = f.select :role, grant_permission_role_select_options, include_blank: 'Please select role'
+
+= render partial: 'grant_permissions/checkboxes', locals: { f: f }
+
+.grid-x.grid-padding-x
   .cell.small-12.actions
     = f.submit 'Update', class: 'button'
     = link_to 'Cancel', grant_grant_permissions_path(grant), class: 'button secondary'
