Include contact info on submission page

--- a/app/views/grant_submissions/submissions/edit.html.haml
+++ b/app/views/grant_submissions/submissions/edit.html.haml
@@ -22,6 +22,7 @@
   .cell.small-12.medium-3
     %aside
       = render partial: 'grants/dates_card', locals: { grant: @grant }
+      = render partial: 'grants/contact_card', locals: { grant: @grant, contacts: @grant.contacts.map(&:user) } if @grant.contacts.any?
   #rfa.small-12.medium-9.cell
     = grant_form_for [@grant, @submission], url: grant_submission_url(@grant, @submission), local: true, data: { turbo: false }, html: {multipart: true} do |f|
       = render partial: 'form', locals: { f: f }
