--- a/app/views/devise/menu/_login_items.html.haml
+++ b/app/views/devise/menu/_login_items.html.haml
@@ -6,7 +6,7 @@
         %li
           = link_to 'Review Access Requests', grant_creator_requests_path
         %li
-          = link_to 'Banners', banners_path
+          = link_to 'Banners', banners_path, target: '_top'
         %li
           = link_to 'All Grants', grants_path
         %li
