Make grant permission editing inline via turbo

--- a/app/assets/stylesheets/grant_permissions.scss
+++ b/app/assets/stylesheets/grant_permissions.scss
@@ -1,3 +1,4 @@
+@import 'settings';
 main.grant_permissions {
   .notification-checkbox{
     padding-top: .3rem;
@@ -12,5 +13,31 @@ main.grant_permissions {
 
   .select2-selection__arrow {
     top: 6px !important;
+  }
+
+  #permissions {
+    border: 1px solid $light-gray;
+    .grid-x {
+      &.header {
+        background-color: $table-head-background;
+        padding: .5em 0;
+        .cell {
+          align-items: baseline;
+          display: table-cell;
+          font-size: .85em;
+          font-weight: bold;
+        }
+      }
+    }
+
+    .permission {
+      border-bottom: 1px solid $light-gray;
+      &:nth-of-type(odd) {
+        background-color: $table-striped-background;
+      }
+      &:nth-of-type(even) {
+        background-color: $white;
+      }
+    }
   }
 }
