--- a/app/views/grant_permissions/new.html.haml
+++ b/app/views/grant_permissions/new.html.haml
@@ -20,9 +20,11 @@
 
 .tabs-panel.is-active
 
-  %p= "Add someone to this Grant and control their access. They will need to have logged in to #{COMPETITIONS_CONFIG[:application_name]} first."
+  %p
+    = "Add someone to this Grant and control their access. They will need to have logged in to #{COMPETITIONS_CONFIG[:application_name]} first."
 
-  .grid-x
-    .cell
-      = form_with model: [@grant, @grant_permission], local: true, data: { turbo: false } do |f|
-        = render 'new_form', f: f, grant: @grant, users: @users
+  = turbo_frame_tag 'new_permission' do
+    .grid-x.grid-padding-x.grid-padding-y
+      .cell
+        = form_with model: [@grant, @grant_permission], local: true, data: { turbo: false } do |f|
+          = render partial: 'new_form', locals: { f: f, grant: @grant, users: @users, grant_permission: @grant_permission }
