--- a/app/views/grant_permissions/_new_form.html.haml
+++ b/app/views/grant_permissions/_new_form.html.haml
@@ -1,7 +1,10 @@
+- if grant_permission.errors.any?
+  = grant_permission.errors.full_messages.to_sentence.capitalize
+
 .grid-x.grid-padding-x
   .cell.small-12.medium-4
     = f.label :user_id, 'Add a Permission by Email Address'
-    = f.select(:user_id, [], { include_blank: true }, data: { users_query_source: users_query_grant_grant_permissions_path(grant_id: @grant.id) })
+    = f.select(:user_id, [], { include_blank: true }, data: { users_query_source: users_query_grant_grant_permissions_path(grant_id: grant.id) })
   .cell.small-12.medium-6
     = f.label :role, 'Grant Role'
     = f.select :role, grant_permission_role_select_options, include_blank: 'Please select a role'
