Tweak css on contact card

--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -255,7 +255,8 @@ h2#section {
 }
 
 // grant dates
-#grant-dates {
+#grant-dates,
+#grant-contacts {
   .card-divider {
     padding: .5rem 1rem;
   }
