Import, override tom-select css

--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -293,6 +293,37 @@ h2#section {
   }
 
   .turbo-row:nth-of-type(even) {
-    background-color: #f1f1f1;
+    background-color: #F1F1F1;
+  }
+}
+
+.ts-wrapper {
+  height: 2.4375rem;
+  background-color: #FEFEFE;
+  ::placeholder {
+    color: #000;
+  }
+  &.single {
+    .ts-control {
+      box-shadow: none;
+      background-color: #FEFEFE;
+      background-image: none;
+      border-radius: 0;
+      font-size: 1em;
+    }
+  }
+
+  .ts-dropdown {
+    color: #0A0A0A;
+    font-size: 1em;
+    .ts-dropdown-content {
+      font-family: 'Helvetica Neue', Helvetica, Roboto, Arial, sans-serif;
+    }
+    .active {
+      border: none;
+      background: #F9F9F9;
+      border-radius: 0;
+      color: #0A0A0A;
+    }
   }
 }
